--- a/README.rdoc
+++ b/README.rdoc
@@ -17,7 +17,7 @@ Add it to your Gemfile (inside test group):
 
     gem 'guard-rspec'
 
-Add guard definition to your Guardfile with:
+Add guard definition to your Guardfile by running this command:
 
     guard init rspec
 
