--- a/README.rdoc
+++ b/README.rdoc
@@ -66,6 +66,10 @@ RSpec guard should automatically detect RSpec version (via spec_helper syntax or
 Pull requests are very welcome! Make sure your patches are well tested. Please create a topic branch for every separate change
 you make.
 
+=== Testing
+
+Please run "rake spec:prepare_fixtures" once before launching specs.
+
 == Authors
 
 {Thibaud Guillaume-Gentil}[http://github.com/thibaudgg]
