Added :rvm option

--- a/README.rdoc
+++ b/README.rdoc
@@ -62,6 +62,7 @@ Other available options:
 
     :drb => true
     :bundler => false # don't use "bundle exec"
+    :rvm => ['1.8.7', '1.9.2'] # directly test on multiple ruby
 
 == Development
 
