--- a/README.rdoc
+++ b/README.rdoc
@@ -64,6 +64,7 @@ Other available options:
     :drb => true
     :bundler => false # don't use "bundle exec"
     :rvm => ['1.8.7', '1.9.2'] # directly run your specs on multiple ruby
+    :formatter => "instafail" # show failing specs instantly
 
 == Development
 
