--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 RSpec guard allows to automatically & intelligently launch specs when files are modified.
 
-- Compatible with RSpec 1.3.x & RSpec 2.0.x
+- Compatible with RSpec 1.x & RSpec 2.x
 - Tested on Ruby 1.8.6, 1.8.7 & 1.9.2.
 
 == Install
@@ -65,6 +65,7 @@ Other available options:
     :bundler => false # don't use "bundle exec"
     :rvm => ['1.8.7', '1.9.2'] # directly run your specs on multiple ruby
     :formatter => "instafail" # show failing specs instantly
+    :fail_fast => true # RSpec 2.1+ only
 
 == Development
 
