Fixed watch parameter syntax in README

--- a/README.rdoc
+++ b/README.rdoc
@@ -32,17 +32,17 @@ RSpec guard can be really adapted to all kind of projects.
 === Standard ruby gems
 
     guard 'rspec' do
-      watch(%r{spec/(.*)_spec.rb})
-      watch(%r{lib/(.*)\.rb})      { |m| "spec/lib/#{m[1]}_spec.rb" }
+      watch(%r{spec/.+_spec\.rb})
+      watch(%r{lib/(.+)\.rb})      { |m| "spec/lib/#{m[1]}_spec.rb" }
       watch('spec/spec_helper.rb') { "spec" }
     end
 
 === Rails app
 
     guard 'rspec' do
-      watch(%r{spec/(.*)_spec.rb})
-      watch(%r{app/(.*)\.rb})                            { |m| "spec/#{m[1]}_spec.rb" }
-      watch(%r{lib/(.*)\.rb})                            { |m| "spec/lib/#{m[1]}_spec.rb" }
+      watch(%r{spec/.+_spec\.rb})
+      watch(%r{app/(.+)\.rb})                            { |m| "spec/#{m[1]}_spec.rb" }
+      watch(%r{lib/(.+)\.rb})                            { |m| "spec/lib/#{m[1]}_spec.rb" }
       watch('spec/spec_helper.rb')                       { "spec" }
       watch('config/routes.rb')                          { "spec/routing" }
       watch('app/controllers/application_controller.rb') { "spec/controllers" }
