--- a/README.rdoc
+++ b/README.rdoc
@@ -53,19 +53,19 @@ Please read {Guard doc}[https://github.com/guard/guard#readme] for more informat
 
 == Options
 
-By default, Guard::RSpec automatically detect your RSpec version (with the +spec_helper.rb+ syntax or with Bundler) but you can force the version with the +:version+ option:
+By default, Guard::RSpec automatically detect your RSpec version (with the <tt>spec_helper.rb</tt> syntax or with Bundler) but you can force the version with the <tt>:version</tt> option:
 
     guard 'rspec', :version => 2 do
       ...
     end
 
-You can pass any of the standard RSpec CLI options using the +:cli+ option:
+You can pass any of the standard RSpec CLI options using the <tt>:cli</tt> option:
 
     guard 'rspec', :cli => "--color --format nested --fail-fast --drb" do
       ...
     end
 
-Former +:color+, +:drb+, +:fail_fast+ and +:formatter+ options are thus deprecated and have no effect anymore.
+Former <tt>:color</tt>, <tt>:drb</tt>, <tt>:fail_fast</tt> and <tt>:formatter</tt> options are thus deprecated and have no effect anymore.
 
 === List of available options:
 
@@ -77,7 +77,7 @@ Former +:color+, +:drb+, +:fail_fast+ and +:formatter+ options are thus deprecat
 
 == Formatters
 
-The +:formatter+ option has been removed since CLI arguments can be passed through the +:cli+ option. If you want to use the former Instafail formatter, you need to use +rspec-instafail+ gem instead:
+The <tt>:formatter</tt> option has been removed since CLI arguments can be passed through the <tt>:cli</tt> option. If you want to use the former Instafail formatter, you need to use <tt>rspec-instafail</tt> gem instead:
 
     # in your Gemfile
     gem 'rspec-instafail'
@@ -87,7 +87,7 @@ The +:formatter+ option has been removed since CLI arguments can be passed throu
       ...
     end
 
-Default formatter is the +progress+ formatter (same as RSpec default).
+Default formatter is the <tt>progress</tt> formatter (same as RSpec default).
 
 == Development
 
@@ -99,7 +99,7 @@ you make.
 
 === Testing
 
-Please run +rake spec:prepare_fixtures+ once before launching specs.
+Please run <tt>rake spec:prepare_fixtures</tt> once before launching specs.
 
 == Authors
 
