--- a/README.rdoc
+++ b/README.rdoc
@@ -74,6 +74,7 @@ Former <tt>:color</tt>, <tt>:drb</tt>, <tt>:fail_fast</tt> and <tt>:formatter</t
     :bundler => false          # don't use "bundle exec" to run the RSpec command, default: true
     :rvm => ['1.8.7', '1.9.2'] # directly run your specs on multiple Rubies, default: nil
     :notification => false     # don't display Growl (or Libnotify) notification after the specs are done running, default: true
+    :all_after_pass => false   # don't run all specs after changed specs pass, default: true
 
 == Notification
 
