--- a/README.rdoc
+++ b/README.rdoc
@@ -75,6 +75,7 @@ Former <tt>:color</tt>, <tt>:drb</tt>, <tt>:fail_fast</tt> and <tt>:formatter</t
     :rvm => ['1.8.7', '1.9.2'] # directly run your specs on multiple Rubies, default: nil
     :notification => false     # don't display Growl (or Libnotify) notification after the specs are done running, default: true
     :all_after_pass => false   # don't run all specs after changed specs pass, default: true
+    :all_on_start => false     # don't run all the specs at startup, default: true
 
 == Notification
 
